Gave the main content area 100% viewport minimum height to ensure that the left nav drawer doesn't get cropped and can be scrolled enough to access the bottommost elements.
card 112: https://trello.com/c/VAxrvJYm

--- a/src/main/resources/scss/app.scss
+++ b/src/main/resources/scss/app.scss
@@ -202,7 +202,7 @@ aside[class*=off-canvas-menu] {
 
 
 .main-section {
-	min-height:30em;
+	min-height:100vh;
 	position: relative;
 }
 
